--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,8 @@
       "host": "127.0.0.1",
       "program": "${fileDirname}",
       "env": {},
-      "args": ["csv", "--verbose", "--dictionary=/home/mshirley/rp.dictionary.json.gz", "--outdir=csv", "~/pktfile.1"],
+      //      "args": ["csv", "--verbose", "--dictionary=/home/mshirley/rp.dictionary.json.gz", "--outdir=csv", "~/pktfile.1"],
+      "args": ["web"],
       "showLog": true
     }
   ]
