--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,19 @@
       //      "args": ["csv", "--verbose", "--dictionary=/home/mshirley/rp.dictionary.json.gz", "--outdir=csv", "~/pktfile.1"],
       "args": ["web"],
       "showLog": true
-    }
+    },
+    {
+      "name": "Test",
+      "type": "go",
+      "request": "launch",
+      "mode": "test",
+      "remotePath": "",
+      "port": 2345,
+      "host": "127.0.0.1",
+      "program": "${workspaceRoot}/server/server_test.go",
+      "env": {},
+      "args": [],
+      "showLog": true
+  }  
   ]
 }
