--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,8 +14,14 @@
       "host": "127.0.0.1",
       "program": "${fileDirname}",
       "env": {},
-      //      "args": ["csv", "--verbose", "--dictionary=/home/mshirley/rp.dictionary.json.gz", "--outdir=csv", "~/pktfile.1"],
-      "args": ["web", "-v"],
+      "args": [
+        "csv",
+        "--verbose",
+        "--dictionary=/home/mshirley/rp.dictionary.json.gz",
+        "--outdir=csv",
+        "~/pktfile.1"
+      ],
+      //"args": ["web", "-v"],
       "showLog": true
     },
     {
@@ -30,6 +36,6 @@
       "env": {},
       "args": [],
       "showLog": true
-  }  
+    }
   ]
 }
